SERVER-47801 Fix $meta:"textScore" for findAndModify